Makegen [FEATURE] Parse command line arguments

--- a/Utilities/Makegen/Makefile.in
+++ b/Utilities/Makegen/Makefile.in
@@ -2,8 +2,8 @@
 names=Makegen
 
 [Project]
-install=install
-libs=-lconfig -lstrings -llogger
+install=true
+libs=lconfig;lstrings
 name=makegen
+staticlibs=logger.a
 type=binary
-
