Config [FIX] Reflect new Logger behaviour

--- a/Libraries/Config/Makefile.in
+++ b/Libraries/Config/Makefile.in
@@ -3,8 +3,9 @@ names=Ini;Args;Item
 installheaders=Config;Ini;Args;Item
 
 [Project]
-install=true
-libs=-llogger
 name=config
 type=library
-
+subtype=dynamic
+install=true
+libs=-llogger
+staticlibs=
