Makegen [FIX] Reflect new Logger behaviour

--- a/Utilities/Makegen/Makefile.in
+++ b/Utilities/Makegen/Makefile.in
@@ -3,7 +3,7 @@ names=Makegen
 
 [Project]
 install=true
-libs=lconfig;lstrings
+libs=lconfig;lstrings;llogger
 name=makegen
-staticlibs=logger.a
+staticlibs=
 type=binary
