--- a/Utilities/Makegen/Makefile
+++ b/Utilities/Makegen/Makefile
@@ -2,7 +2,7 @@ CC=g++
 INSTALLDIR=C:\tools\utils
 CFLAGS=-Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
 BINNAME=makegen.exe
-LIBS=-lconfig -lstrings
+LIBS=-lconfig -lstrings -llogger
 
 all: $(BINNAME)
 
