jsbloat [BUGFIX] Update makefiles

--- a/Utilities/jsbloat/Makefile.in
+++ b/Utilities/jsbloat/Makefile.in
@@ -3,8 +3,8 @@ names=
 
 [Project]
 install=true
-libs=-lconfig -lstrings
+libs=-lconfig;-lstrings;-llogger
 name=jsbloat
-staticlibs=-llogger
+staticlibs=
 type=binary
 
