--- a/Utilities/jsbloat/Makefile
+++ b/Utilities/jsbloat/Makefile
@@ -1,14 +1,13 @@
 CC=g++
 INSTALLDIR=C:\tools\utils
 CFLAGS=-Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
-LIBS=-lconfig -lstrings 
-STATICS=-Wl,--whole-archive $(INSTALLDIR)\-llogger -Wl,--no-whole-archive
+LIBS=-lconfig -lstrings -llogger 
 BINNAME=jsbloat.exe
 
 all: $(BINNAME)
 
 $(BINNAME): Main.cpp 
-	$(CC) $(CFLAGS) $(LIBS) $(STATICS)  $^ -o $@
+	$(CC) $(CFLAGS) $(LIBS)  $^ -o $@
 
 clean:
 	del $(BINNAME) *.o *.gch
