Config [BUGFIX] Fix Makefile test target

--- a/Libraries/Config/Makefile
+++ b/Libraries/Config/Makefile
@@ -24,11 +24,15 @@ $(LIBNAME): Ini.o Args.o Item.o Csv.o
 test: $(LIBNAME) install build_test run_test
 
 build_test: tests/main.cpp
-	$(CC) $(CFLAGS) $^ -o $@ -lstrings -llogger -L./ -l:libconfig.dll 
+	$(CC) $(CFLAGS) $^ -o test.exe -lstrings -llogger -L./ -l:libconfig.dll 
 
-run_test: test
+run_test:
+	copy test.exe $(INSTALLDIR)
+	del test.exe
+	cd tests
 	cls
 	test
+	del $(INSTALLDIR)\test.exe
 
 clean:
 	del $(LIBNAME) *.o *.gch
