Makegen [FEATURE] Add custom flags to makegen infile
Also, fix all makefiles currently present in repo

--- a/Libraries/Bitmap/Makefile
+++ b/Libraries/Bitmap/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 INSTALLDIR=C:\tools\utils
-CFLAGS=-Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
+CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
 LIBS=-llogger 
 LIBNAME=libbitmap.dll
 
@@ -10,7 +10,7 @@ Bitmap.o: Bitmap.cpp Bitmap.hpp
 	$(CC) $(CFLAGS) -fPIC $^ -c
 
 $(LIBNAME): Bitmap.o 
-	$(CC) $(CFLAGS) -shared $(LIBS)  $^ -o $@
+	$(CC) $(CFLAGS) -shared $(LIBS) $^ -o $@
 
 clean:
 	del $(LIBNAME) *.o *.gch
