--- a/Libraries/Strings/Makefile
+++ b/Libraries/Strings/Makefile
@@ -1,19 +1,20 @@
 CC=g++
-CFLAGS=-Wall -Wextra -pedantic
-LIBNAME=libstrings.dll
 INSTALLDIR=C:\tools\utils
+CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
+LIBS=
+LIBNAME=libstrings.dll
 
 all: $(LIBNAME)
 
 Strings.o: Strings.cpp Strings.hpp
 	$(CC) $(CFLAGS) -fPIC $^ -c
 
-$(LIBNAME): Strings.o
-	$(CC) -shared $^ -o $@
+$(LIBNAME): Strings.o 
+	$(CC) $(CFLAGS) -shared $(LIBS) $^ -o $@
 
 clean:
-	del -y $(LIBNAME) *.o *.gch
+	del $(LIBNAME) *.o *.gch
 
 install:
-	copy /y Strings.hpp $(INSTALLDIR)
 	copy /y $(LIBNAME) $(INSTALLDIR)
+	copy /y Strings.hpp $(INSTALLDIR)
