--- a/Utilities/Hexrgb/Makefile.in
+++ b/Utilities/Hexrgb/Makefile.in
@@ -3,6 +3,7 @@ names=
 
 [Project]
 install=true
+flags=-std=gnu++14 -Wall -Wextra -pedantic
 libs=-lconfig;-lstrings;-llogger
 name=hexrgb
 staticlibs=
