--- a/Utilities/jsbloat/Makefile.in
+++ b/Utilities/jsbloat/Makefile.in
@@ -3,8 +3,8 @@ names=
 
 [Project]
 install=true
+flags=-std=gnu++14 -Wall -Wextra -pedantic
 libs=-lconfig;-lstrings;-llogger
 name=jsbloat
 staticlibs=
 type=binary
-
