--- a/Libraries/Config/Makefile.in
+++ b/Libraries/Config/Makefile.in
@@ -4,6 +4,7 @@ installheaders=Config;Ini;Args;Item;Csv
 
 [Project]
 name=config
+flags=-std=gnu++14 -Wall -Wextra -pedantic
 type=library
 subtype=dynamic
 install=true
