--- a/Libraries/Logger/Makefile
+++ b/Libraries/Logger/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 INSTALLDIR=C:\tools\utils
-CFLAGS=-Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
+CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
 LIBS=
 LIBNAME=liblogger.dll
 
@@ -10,7 +10,7 @@ Logger.o: Logger.cpp Logger.hpp
 	$(CC) $(CFLAGS) -fPIC $^ -c
 
 $(LIBNAME): Logger.o 
-	$(CC) $(CFLAGS) -shared $(LIBS)  $^ -o $@
+	$(CC) $(CFLAGS) -shared $(LIBS) $^ -o $@
 
 clean:
 	del $(LIBNAME) *.o *.gch
