--- a/Libraries/Waves/Makefile
+++ b/Libraries/Waves/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 INSTALLDIR=C:\tools\utils
-CFLAGS=-Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
+CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
 LIBS=
 LIBNAME=libwaves.dll
 
@@ -10,7 +10,7 @@ waves.o: waves.cpp waves.hpp
 	$(CC) $(CFLAGS) -fPIC $^ -c
 
 $(LIBNAME): waves.o 
-	$(CC) $(CFLAGS) -shared $(LIBS)  $^ -o $@
+	$(CC) $(CFLAGS) -shared $(LIBS) $^ -o $@
 
 clean:
 	del $(LIBNAME) *.o *.gch
