Strings [FEATURE] Update API and tests

--- a/Libraries/Strings/Makefile
+++ b/Libraries/Strings/Makefile
@@ -1,7 +1,6 @@
 CC=g++
 INSTALLDIR=C:\tools\utils
-CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic -I$(INSTALLDIR) -L$(INSTALLDIR)
-LIBS=
+CFLAGS=-std=gnu++14 -Wall -Wextra -pedantic
 LIBNAME=libstrings.dll
 
 all: $(LIBNAME)
@@ -10,12 +9,12 @@ Strings.o: Strings.cpp Strings.hpp
 	$(CC) $(CFLAGS) -fPIC $^ -c
 
 $(LIBNAME): Strings.o 
-	$(CC) $(CFLAGS) -shared $(LIBS) $^ -o $@
+	$(CC) $(CFLAGS) -shared $^ -o $@
 
 test: $(LIBNAME) testrunner.exe run_test
 
 testrunner.exe: tests/main.cpp
-	$(CC) $(CFLAGS) -I./ -L./ $^ -o $@ $(LIBS) -lstrings
+	$(CC) $(CFLAGS) -I./ -L./ $^ -o $@ $(LIBS) -l:./$(LIBNAME)
 
 run_test:
 	cls
