--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,7 @@
 # Cmake
 Libraries/Bitmap/build
 Libraries/Config/build
+Libraries/LevelD/build
 Libraries/Logger/build
 Libraries/Strings/build
 
