--- a/Libraries/Bitmap/CMakeLists.txt
+++ b/Libraries/Bitmap/CMakeLists.txt
@@ -1,15 +1,12 @@
 cmake_minimum_required (VERSION 3.4)
 project (bitmap)
 
-# Export all symbols in dynamic library
-set (CMAKE_INSTALL_PREFIX /tools/utils)
-
 include_directories(/tools/utils/include)
 
 # Add library
-add_library(bitmap Bitmap.cpp)
-target_include_directories (bitmap PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(${PROJECT_NAME} Bitmap.cpp)
+target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Install
-install(TARGETS bitmap DESTINATION lib)
+install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 install(FILES Bitmap.hpp DESTINATION include)
