--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@
 Libraries/Bitmap/build
 Libraries/Config/build
 Libraries/LevelD/build
+Libraries/LevelD/Bytestream/build
 Libraries/Logger/build
 Libraries/Strings/build
 
