[FEATURE] Add module NPCS to lvd format

--- a/Libraries/LevelD/CMakeLists.txt
+++ b/Libraries/LevelD/CMakeLists.txt
@@ -15,6 +15,7 @@ add_library(${PROJECT_NAME}
 					Modules/ModuleMesh.cpp
 					Modules/ModulePlayers.cpp
 					Modules/ModuleItems.cpp
+					Modules/ModuleNpcs.cpp
 )
 target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
