[MAINT] Update ignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ Libraries/Logger/build
 Libraries/Logger/vsbuild
 Libraries/Strings/build
 Libraries/Strings/vsbuild
+Libraries/Testrunner/build
 Utilities/jsbloat/build
 
 # =========================
