[MAINT] Properly install testrunner header

--- a/Libraries/Testrunner/CMakeLists.txt
+++ b/Libraries/Testrunner/CMakeLists.txt
@@ -1,12 +1,14 @@
 cmake_minimum_required ( VERSION 2.8) 
 
+project ( testrunner )
+
 set (CMAKE_INSTALL_PREFIX /tools/utils)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
 
 # Install only header
-install(FILES Test.hpp DESTINATION include)
+add_library(${PROJECT_NAME} INTERFACE)
+target_include_directories(${PROJECT_NAME} INTERFACE include)
+install(TARGETS ${PROJECT_NAME} DESTINATION include)
+install(FILES include/Test.hpp DESTINATION include)
 
-# Buld testrunner demonstration demo
-project ( testrunner_demo )
-
-add_executable(${PROJECT_NAME} Main.cpp)
+add_subdirectory(demo)
