--- a/Libraries/Config/CMakeLists.txt
+++ b/Libraries/Config/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required (VERSION 3.4)
 project (config)
 
+set (CMAKE_INSTALL_PREFIX /tools/utils)
 include_directories(/tools/utils/include)
 
 if (NOT CMAKE_DEBUG_POSTFIX)
@@ -14,3 +15,7 @@ target_include_directories (config PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 # Install
 install(TARGETS config DESTINATION lib)
 install(FILES Config.hpp Args.hpp Csv.hpp Ini.hpp Item.hpp DESTINATION include)
+
+add_executable(testrunner tests/Main.cpp)
+find_library(LIB_LOG NAMES logger)
+target_link_libraries(testrunner ${PROJECT_NAME} ${LIB_LOG})
