--- a/Libraries/Strings/CMakeLists.txt
+++ b/Libraries/Strings/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required (VERSION 3.4)
 project (strings)
 
 # Export all symbols in dynamic library
-set (CMAKE_INSTALL_PREFIX /tools/utils)
+set (CMAKE_INSTALL_PREFIX /tools)
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set (CMAKE_GENERATOR_PLATFORM x86)
 
 if (NOT CMAKE_DEBUG_POSTFIX)
 	set(CMAKE_DEBUG_POSTFIX "-d")
@@ -17,6 +19,6 @@ install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 install(FILES Strings.hpp DESTINATION include)
 
 # Add testrunner
-include_directories(/tools/utils/include)
+include_directories(/tools/include)
 add_executable(testrunner tests/Main.cpp)
 target_link_libraries(testrunner ${PROJECT_NAME})
