[MAINT] Drop dependency on logger from config

--- a/Libraries/Config/CMakeLists.txt
+++ b/Libraries/Config/CMakeLists.txt
@@ -4,6 +4,7 @@ project (config)
 set (CMAKE_INSTALL_PREFIX /tools)
 include_directories(/tools/include)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set (CMAKE_GENERATOR_PLATFORM x64)
 
 if (NOT CMAKE_DEBUG_POSTFIX)
 	set(CMAKE_DEBUG_POSTFIX "-d")
@@ -18,6 +19,5 @@ install(TARGETS config DESTINATION lib)
 install(FILES Config.hpp Args.hpp Csv.hpp Ini.hpp Item.hpp DESTINATION include)
 
 add_executable(testrunner tests/Main.cpp)
-find_library(LIB_LOG NAMES logger)
 find_library(LIB_STR NAMES strings)
-target_link_libraries(testrunner ${PROJECT_NAME} ${LIB_LOG} ${LIB_STR})
+target_link_libraries(testrunner ${PROJECT_NAME} ${LIB_STR})
