[MAINT] Bump to version 0.5.3

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ Libraries/Logger/vsbuild
 Libraries/Strings/build
 Libraries/Strings/vsbuild
 Libraries/Testrunner/build
+Libraries/RELEASE
 Utilities/jsbloat/build
 
 # =========================
