--- a/Libraries/Testrunner/CMakeLists.txt
+++ b/Libraries/Testrunner/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required ( VERSION 2.8)
 
 project ( testrunner )
 
-set (CMAKE_INSTALL_PREFIX /tools/utils)
+set (CMAKE_INSTALL_PREFIX /tools)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-set (CMAKE_GENERATOR_PLATFORM x86)
+set (CMAKE_GENERATOR_PLATFORM x64)
 
 # Install only header
 add_library(${PROJECT_NAME} INTERFACE)
