--- a/Libraries/Config/CMakeLists.txt
+++ b/Libraries/Config/CMakeLists.txt
@@ -4,6 +4,7 @@ project (config)
 set (CMAKE_INSTALL_PREFIX /tools)
 include_directories(/tools/include)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_GENERATOR_PLATFORM x64)
 
 if (NOT CMAKE_DEBUG_POSTFIX)
