--- a/Libraries/Strings/CMakeLists.txt
+++ b/Libraries/Strings/CMakeLists.txt
@@ -4,6 +4,7 @@ project (strings)
 # Export all symbols in dynamic library
 set (CMAKE_INSTALL_PREFIX /tools)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
+set (CMAKE_CXX_STANDARD 17)
 set (CMAKE_GENERATOR_PLATFORM x64)
 
 if (NOT CMAKE_DEBUG_POSTFIX)
