Implement Bitmap::saveToFile

--- a/Libraries/Bitmap/CMakeLists.txt
+++ b/Libraries/Bitmap/CMakeLists.txt
@@ -7,9 +7,13 @@ set (CMAKE_INSTALL_PREFIX /tools/utils)
 include_directories(/tools/utils/include)
 
 # Add library
-add_library(${PROJECT_NAME} Bitmap.cpp Palette.cpp)
+add_library(${PROJECT_NAME} Bitmap.cpp Palette.cpp RawHeaders.cpp )
 target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Install
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 install(FILES Bitmap.hpp DESTINATION include)
+
+# Add executable
+add_executable(pokus Main.cpp)
+target_link_libraries(pokus ${PROJECT_NAME})
