--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required ( VERSION 3.4 )
 
+include_directories ( "Testrunner/include" )
+
 set (CMAKE_INSTALL_PREFIX /tools)
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 set (CMAKE_CXX_STANDARD 17)
