[INDEV] First libperlin commit

--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -25,3 +25,4 @@ add_subdirectory ( Strings )
 add_subdirectory ( Config )
 add_subdirectory ( LevelD )
 add_subdirectory ( Bitmap )
+add_subdirectory ( Perlin )
