--- a/Libraries/Perlin/tests/CMakeLists.txt
+++ b/Libraries/Perlin/tests/CMakeLists.txt
@@ -4,6 +4,7 @@ set ( TGT_NAME "testrunner_${PROJECT_NAME}" )
 
 add_executable ( ${TGT_NAME}
 	Main.cpp
+	VectorTests.cpp
 )
 
 target_link_libraries ( ${TGT_NAME}
@@ -12,7 +13,7 @@ target_link_libraries ( ${TGT_NAME}
 
 add_test (
 	NAME
-		${TGT_NAME}
+		${PROJECT_NAME}
 	COMMAND
 		${TGT_NAME}
 )
