--- a/Libraries/Perlin/tests/CMakeLists.txt
+++ b/Libraries/Perlin/tests/CMakeLists.txt
@@ -5,6 +5,7 @@ set ( TGT_NAME "testrunner_${PROJECT_NAME}" )
 add_executable ( ${TGT_NAME}
 	Main.cpp
 	VectorTests.cpp
+	GradientTests.cpp
 )
 
 target_link_libraries ( ${TGT_NAME}
