--- a/Libraries/Perlin/tests/CMakeLists.txt
+++ b/Libraries/Perlin/tests/CMakeLists.txt
@@ -4,9 +4,8 @@ set ( TGT_NAME "testrunner_${PROJECT_NAME}" )
 
 add_executable ( ${TGT_NAME}
 	Main.cpp
-	VectorTests.cpp
-	GradientMathTests.cpp
-	GradientTests.cpp
+	MathTests.cpp
+	VectorMathTests.cpp
 )
 
 target_link_libraries ( ${TGT_NAME}
