[indev] rewrite config::args unit tests in catch2

--- a/Libraries/Config/tests/CMakeLists.txt
+++ b/Libraries/Config/tests/CMakeLists.txt
@@ -1,7 +1,7 @@
 set ( TESTRUNNER "testrunner_config" )
 
 add_executable( ${TESTRUNNER} 
-	main.cpp
+	Main.cpp
 )
 
 target_link_libraries( ${TESTRUNNER}
@@ -10,3 +10,16 @@ target_link_libraries( ${TESTRUNNER}
 )
 
 add_test ( NAME ${PROJECT_NAME} COMMAND ${TESTRUNNER} ${CMAKE_CURRENT_SOURCE_DIR} )
+
+set ( TESTRUNNER_OLD "testrunner_config_old" )
+
+add_executable( ${TESTRUNNER_OLD} 
+	_main.cpp
+)
+
+target_link_libraries( ${TESTRUNNER_OLD}
+	${PROJECT_NAME}
+	strings
+)
+
+add_test ( NAME ${PROJECT_NAME}_2 COMMAND ${TESTRUNNER_OLD} ${CMAKE_CURRENT_SOURCE_DIR} )
