--- a/Libraries/LevelD/CMakeLists.txt
+++ b/Libraries/LevelD/CMakeLists.txt
@@ -18,8 +18,26 @@ add_library(${PROJECT_NAME}
 target_include_directories (${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 # Install
-install(TARGETS ${PROJECT_NAME} DESTINATION lib)
-install(FILES LevelD.hpp DESTINATION include)
+install(
+	TARGETS
+		${PROJECT_NAME}
+	DESTINATION
+		lib
+)
+
+install(
+	FILES
+		LevelD.hpp
+	DESTINATION
+		include
+)
+
+install(
+	FILES
+		LevelD.md
+	DESTINATION
+		docs
+)
 
 # Tests
 add_subdirectory ( Tests )
