[FIX] Linking of wget.js unzip.vbs

--- a/Environment/CMakeLists.txt
+++ b/Environment/CMakeLists.txt
@@ -7,8 +7,8 @@ install(
 		bootstrap.bat
 		doomsh.cmd
 		dsh.bat
-		Scripts/unzip.vbs
-		Scripts/wget.js
+		unzip.vbs
+		wget.js
 	DESTINATION
 		install
 )
