--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required ( VERSION 3.0 )
 
-# TODO: Uncomment when production ready
-# add_subdirectory ( jsbloat )
+project ( dshbin )
+
+add_subdirectory ( jsbloat )
