--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -17,7 +17,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake -G "MinGW Makefiles" ..
+        cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
     - name: make
       run: make
     - name: make check
