--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -14,10 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: configure
-      run: |
-        mkdir build
-        cd build
-        cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" ..
+      run: cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" .
     - name: make
       run: make
     - name: make check
