--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -7,24 +7,37 @@ on:
       - master
 
 jobs:
-  build:
-    name: Build on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-latest, ubuntu-latest]
+  build-windows-mingw:
+    runs-on: windows-latest
+    
+    steps:
+      - uses: actions/checkout@v1
+      - name: configure
+        run: cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" .
+      - name: make
+        run: make
+      - name: test
+        run: ctest
+      - name: package
+        run: cpack
+        
+  build-windows-visual:
+    runs-on: windows-latest
     
     steps:
     - uses: actions/checkout@v1
-    - name: configure-windows
-      if: ${{ matrix.os }} == 'windows-latest'
-      run: cmake -G "MinGW Makefiles" -DCMAKE_SH="CMAKE_SH-NOTFOUND" .
-    - name: configure-ubuntu
-      if: ${{ matrix.os }} == 'ubuntu-latest'
+    - name: configure
+      run: cmake .
+    - name: make-debug
+      run: devenv dsh.sln /Build Debug
+    - name: make-release
+      run: devenv dsh.sln /Build Release
+  
+  build-ubuntu:
+    runs-on: ubuntu-latest
+  
+    steps:
+    - uses: actions/checkout@v1
+    - name: configure
       run: cmake .
     - name: make
-      run: make
-    - name: tests
-      run: ctest
-    - name: package
-      run: cpack
