[FIX] Configure errors on ubuntu

--- a/Libraries/Config/CMakeLists.txt
+++ b/Libraries/Config/CMakeLists.txt
@@ -7,9 +7,9 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../Strings")
 
 # Add library
 add_library( ${PROJECT_NAME}
-	Args.cpp 
-	Csv.cpp 
-	Ini.cpp 
+	Args.cpp
+	Csv.cpp
+	Ini.cpp
 	Item.cpp
 )
 
@@ -20,20 +20,20 @@ target_include_directories ( ${PROJECT_NAME}
 
 # Install
 install(
-	TARGETS      config 
+	TARGETS      config
 	DESTINATION  lib
 )
 
 install(
 	FILES
-		Config.hpp 
-		Args.hpp 
-		Csv.hpp 
-		Ini.hpp 
-		Item.hpp 
-	DESTINATION 
+		Config.hpp
+		Args.hpp
+		Csv.hpp
+		Ini.hpp
+		Item.hpp
+	DESTINATION
 		include
 )
 
 # Tests
-add_subdirectory ( Tests )
+add_subdirectory ( tests )
