--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,8 +18,6 @@ jobs:
         run: make
       - name: test
         run: ctest
-      #- name: package
-        #run: cpack
         
   build-windows-visual:
     runs-on: windows-latest
@@ -28,10 +26,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: configure
       run: cmake .
-    - name: make
-      run: |
-       & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Debug
-       & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Release
+    #- name: make
+    #  run: & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Release
   
   build-ubuntu:
     runs-on: ubuntu-latest
@@ -42,3 +38,7 @@ jobs:
       run: cmake .
     - name: make
       run: make
+    - name: tests
+      run: ctest
+    - name: package
+      run: cpack
