--- a/Libraries/CMakeLists.txt
+++ b/Libraries/CMakeLists.txt
@@ -8,6 +8,12 @@ if (NOT CMAKE_DEBUG_POSTFIX)
 	set(CMAKE_DEBUG_POSTFIX "-d")
 endif()
 
+if ("${BUILD_SYSTEM}" MATCHES "VSx64")
+	set ( MANDATORY_FOR_VISUAL_STUDIO TRUE )
+else()
+	set ( MANDATORY_FOR_VISUAL_STUDIO FALSE )
+endif()
+
 add_subdirectory ( Strings )
 add_subdirectory ( Config )
 add_subdirectory ( LevelD )
