--- a/Libraries/LevelD/CMakeLists.txt
+++ b/Libraries/LevelD/CMakeLists.txt
@@ -25,6 +25,15 @@ install(
 		lib
 )
 
+if (${MANDATORY_FOR_VISUAL_STUDIO})
+	install(
+		FILES
+			${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}-d.lib
+		DESTINATION
+			lib
+	)
+endif()
+
 install(
 	FILES
 		LevelD.hpp
