--- a/Libraries/Strings/CMakeLists.txt
+++ b/Libraries/Strings/CMakeLists.txt
@@ -18,6 +18,15 @@ install(
 	DESTINATION  lib
 )
 
+if (${MANDATORY_FOR_VISUAL_STUDIO})
+	install(
+		FILES
+			${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}-d.lib
+		DESTINATION
+			lib
+	)
+endif()
+
 install(
 	FILES
 		Strings.hpp 
