--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -26,8 +26,10 @@ jobs:
     - uses: actions/checkout@v1
     - name: configure
       run: cmake .
-    #- name: make
-    #  run: & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Release
+    - name: make
+      run: |
+        & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Release /Project catch2
+        & "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\devenv" dsh.sln /Build Release
   
   build-ubuntu:
     runs-on: ubuntu-latest
