--- a/Utilities/jsbloat/CMakeLists.txt
+++ b/Utilities/jsbloat/CMakeLists.txt
@@ -6,7 +6,12 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
 
 include_directories(/tools/include)
 
-add_executable(${PROJECT_NAME} Main.cpp)
+add_executable(${PROJECT_NAME}
+    Main.cpp
+    IO.cpp
+    SourceFile.cpp
+    Obfuscation.cpp
+)
 
 TARGET_LINK_LIBRARIES(${PROJECT_NAME} config strings)
 
