--- a/Utilities/CMakeLists.txt
+++ b/Utilities/CMakeLists.txt
@@ -3,4 +3,4 @@ cmake_minimum_required ( VERSION 3.0 )
 project ( dshbin )
 
 add_subdirectory ( jsbloat )
-add_subdirectory ( leveld-migration-tool )
+add_subdirectory ( leveld-tool )
